SAK-17521 add properties, plugin repo, update parent, etc.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@69530 66ffb92e-73f9-0310-93c1-f5514f145a0a