@@ -1,10 +1,11 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>sakai-standard-tool</artifactId>
         <groupId>org.sakaiproject.purepoms</groupId>
-        <version>2.7.0-build03</version>
+        <artifactId>sakai-standard-tool</artifactId>
+        <version>2.7.0-build04</version>
     </parent>
     <name>Sakai Message Center Project</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
@@ -23,14 +24,11 @@
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
         <sakai.common.version>1.0.0-beta01</sakai.common.version>
-        <sakai.jsf.version>2.7.0-SNAPSHOT</sakai.jsf.version>
+        <sakai.edu-services.version>1.0.0-beta01</sakai.edu-services.version>
+        <sakai.jsf.version>2.7.0-M1</sakai.jsf.version>
+        <sakai.search.version>1.2.0-rc01</sakai.search.version>
     </properties>
     <scm>
-        <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk
-        </connection>
-        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk
-        </developerConnection>
-        <url>https://source.sakaiproject.org/svn/msgcntr/trunk</url>
     </scm>
     <distributionManagement>
         <downloadUrl>http://source.sakaiproject.org/maven2/
@@ -62,6 +60,9 @@
             <name>Sakai Maven Repository</name>
             <layout>default</layout>
             <url>http://source.sakaiproject.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -71,6 +72,9 @@
             <name>Sakai Maven Repo Snapshots</name>
             <layout>default</layout>
             <url>http://source.sakaiproject.org/maven2-snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -80,29 +84,41 @@
             <name>Maven Repository Switchboard</name>
             <layout>default</layout>
             <url>http://repo1.maven.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
         </repository>
     </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>Sakai Plugin Repo</id>
+            <url>http://source.sakaiproject.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </pluginRepository>
+    </pluginRepositories>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.sakaiproject.msgcntr</groupId>
                 <artifactId>sakai-messageforums-api</artifactId>
-                <version>2.7.0-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.msgcntr</groupId>
                 <artifactId>sakai-messageforums-component-impl
                 </artifactId>
-                <version>2.7.0-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.msgcntr</groupId>
                 <artifactId>sakai-messageforums-hbm</artifactId>
-                <version>2.7.0-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -112,30 +128,50 @@
                 <type>pom</type>
             </dependency>
             <dependency>
-            	<groupId>org.sakaiproject.edu-services.gradebook</groupId>
-            	<artifactId>gradebook-service-api</artifactId>
-            	<version>1.0.0-beta01</version>
+                <groupId>org.sakaiproject.edu-services.gradebook</groupId>
+                <artifactId>gradebook-service-api</artifactId>
+                <version>${sakai.edu-services.version}</version>
             </dependency>
             <dependency>
-            	<groupId>org.sakaiproject.common</groupId>
-            	<artifactId>sakai-privacy-api</artifactId>
-            	<version>${sakai.common.version}</version>
+                <groupId>org.sakaiproject.common</groupId>
+                <artifactId>sakai-privacy-api</artifactId>
+                <version>${sakai.common.version}</version>
             </dependency>
             <dependency>
-            	<groupId>org.sakaiproject.common</groupId>
-            	<artifactId>sakai-common-type-api</artifactId>
-            	<version>${sakai.common.version}</version>
+                <groupId>org.sakaiproject.common</groupId>
+                <artifactId>sakai-common-type-api</artifactId>
+                <version>${sakai.common.version}</version>
             </dependency>
             <dependency>
-            	<groupId>org.sakaiproject.common</groupId>
-            	<artifactId>sakai-common-manager-api</artifactId>
-            	<version>${sakai.common.version}</version>
+                <groupId>org.sakaiproject.common</groupId>
+                <artifactId>sakai-common-manager-api</artifactId>
+                <version>${sakai.common.version}</version>
             </dependency>
             <dependency>
-            	<groupId>org.sakaiproject.search</groupId>
-            	<artifactId>search-api</artifactId>
-            	<version>1.2-beta01</version>
+                <groupId>org.sakaiproject.search</groupId>
+                <artifactId>search-api</artifactId>
+                <version>${sakai.search.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.6.1</version>
+                <configuration>
+                    <debug>true</debug>
+                    <links>
+                        <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+                    </links>
+                    <breakiterator>true</breakiterator>
+                    <verbose>false</verbose>
+                    <aggregate>true</aggregate>
+                    <maxmemory>512m</maxmemory>
+                    <additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
